fix header spacing

--- a/packages/editor-ui/src/n8n-theme-variables.scss
+++ b/packages/editor-ui/src/n8n-theme-variables.scss
@@ -39,3 +39,6 @@ $--custom-input-font-disabled: #555;
 
 $--table-row-hover-background: lighten( $--custom-table-background-alternative, 15% );
 $--table-current-row-background: $--table-row-hover-background;
+
+$--sidebar-width: 65px;
+$--sidebar-expanded-width: 200px;
